--- a/data-types.qmd
+++ b/data-types.qmd
@@ -42,7 +42,7 @@ When we assign characters to a variable, the content of the variable will be eva
 
 ```{r}
 tree <- "Quercus robur"
-class(name_of_tree)
+class(tree)
 ```
 
 Let's look at the example below, we have error because `oak` is an object with no values assigned to it. So `oak` and "oak" are different. The latter is a character while the former is an object.
@@ -108,14 +108,17 @@ satisfaction_level <- factor(c("very satisfied", "satisfied", "satisfied",
                              levels = c("very dissatisfied", "dissatisfied",
                                         "neutral", "satisfied", "very satisfied")
                 )
+
 satisfaction_level
+
+class(satisfaction_level)
 ```
 
 On printing the variable we can see that:
 
 *   The levels are not arranged according to alphabetical order, 
 *   The order arrangement of the levels when we print the follows the order specified in the argument `levels`,
-* The value neutral indicated in levels but not in the data collected is still printed as part of the levels. This indicate that factors are indeed predefined even if data on a particular factor is not collected. 
+*   The value neutral indicated in levels but not in the data collected is still printed as part of the levels. This indicate that factors are indeed predefined even if data on a particular factor is not collected. 
 
 We can perform a quick check on the frequency of each category using the function `table()`.
 
@@ -129,30 +132,62 @@ The result shows `neutral` as having zero, meaning that no respondent choose neu
 we have been using functions a lot now without properly defining what functions are. Just keep in mind that functions are little programs or block of codes that perform specified actions. More will be discussion on that in @sec-fns.
 :::
 
-
-## Integers {#sec-integer}
-## Numerical Data
-
-There are two types of numerical data in R, integers and doubles.
-
--   **Doubles**: These are decimal numbers
+To confirm if a variable is a factor data type use the `is.factor()` . Let's create a new survey response, but this time it won't be wrapped in the factor variable.
 
 ```{r}
-typeof(1.5)
+satisfaction_level_chr <- c("very satisfied", "satisfied", "satisfied",
+                               "dissatisfied", "very satisfied", "very dissatisfied",
+                               "very satisfied", "dissatisfied")
+
+is.factor(satisfaction_level_chr)
+is.factor(satisfaction_level)
 ```
 
--   **Integers**: These are whole number. They usually having a capital L in front but are printed normally
+## Integer {#sec-integer}
+`Integer` are whole numbers and are written by writing a digit followed by a `L`.
+```{r}
+5L
+class(5L)
+```
+
+When divided by another integer or another numeric data type the result is usually a `double`.
+```{r}
+25L/5L
+
+typeof(25L / 5L)
+```
+
+Just like characters and factors, we can also check if a particular object is an integer using `is.integer()`.
 
 ```{r}
-typeof(1L)
+is.integer(5)
+is.integer(5L)
 ```
 
-You can create a sequence of data using **:**. For example to create a sequence of 1 to 15
+## Doubles
+Doubles are also referred to as floats. They are numbers with decimal point. 
+```{r}
+5.1
+typeof(5.1)
+```
+When a mathematical operation is performed on a double, a double is return
+```{r}
+typeof(1.5/3)
+```
+To check if an object is a double we use its `is._` variant, in this case `is.double()`
+
+```{r}
+is.double(2.9)
+```
+
+A sequence of integers or doubles can be created using `:` with the start on the left and the end at the right of the symbol.
 
 ```{r}
 1:15
 ```
 
+
+`
 ## Logical {#sec-logical}
 
 Boolean also referred to as logical values. Boolean includes `TRUE`, `FALSE` and `NA` which refers to not available.
